--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -37,13 +37,13 @@ header ol{
     gap: 10px;
     list-style-type: none;
     color: var(--text-color);
-    font-size: 15px;
+    font-size: 10px;
     padding: 5px;
 }
 header a{
     color: var(--text-color);
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
 }
 header h1{
     padding-top: 0px;
@@ -332,7 +332,7 @@ textarea{
     margin-bottom: 10px;
 }
 #news input{
-    width: 400px;
+    width: 350px;
     height: 60px;
     font-size: 15px;
     padding: 15px;
@@ -345,9 +345,10 @@ textarea{
 .button button{
     position: absolute;
     left: 230px;
+    width: 35%;
     height: 40px;
     margin: auto;
-    padding: auto;
+    padding: 10px;
     top: 15%;
     border: 1px solid var(--secondary-color);
     text-align: center;
