--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -1,12 +1,11 @@
 *{
     box-sizing: border-box;
-    padding: 0 auto;
-    margin: 0 auto;
+    padding: 0 ;
+    margin: 0 ;
     font-family: 'Montserrat', sans-serif;
 }
 body{
     background-color: rgb(255, 254, 253);
-    max-width: 100%;
 }
 :root{
     --primary-color:rgb(136, 71, 22);
@@ -31,19 +30,19 @@ header{
 .Corps .image-coke{
     width: 500px;
 }
-header ol{
+header ol li{
     display: inline-flex;
     justify-content: space-between;
     gap: 10px;
     list-style-type: none;
     color: var(--text-color);
-    font-size: 10px;
+    font-size: 25px;
     padding: 5px;
 }
-header a{
+header ol li a{
     color: var(--text-color);
     text-decoration: none;
-    font-size: 15px;
+    font-size: 30px;
 }
 header h1{
     padding-top: 0px;
@@ -109,25 +108,29 @@ h2{
     font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
+    margin-left: 10px;
 }
 .just{
   margin-top: 3rem;
   display: grid;
   grid-template-columns:repeat(auto-fit,minmax(150px, 1fr)) ;
   text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #menu, #reviews, #post{
     background-color: rgb(226, 211, 211);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .coffe,.reviews-1{
     text-align: center;
-    width: 100%;
     display: grid;
     grid-template-columns:repeat(auto-fit,minmax(300px, 1fr)) ;
     padding: 20px;
-    justify-content: space-between;
-    font-size: 10px; 
+    font-size: 10px;
 }
 #menu h1{
     text-align: center;
@@ -145,10 +148,10 @@ h2{
 }
 #menu .p1{
     padding: 5px;
-    width: 250px;
     height: 250px;
     border-radius: 5px;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 #menu legend{
@@ -187,14 +190,17 @@ h2{
 }
 #gallery .gallery-1{
     display: grid;
-    justify-content: space-between;
-    gap: 5px;
+    text-align: center;
     grid-template-columns:repeat(auto-fit,minmax(300px,1fr)) ;
+}
+.gallery-1 p{
+    height: 250px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
 }
 #gallery img{
     width: 300px;
-    height: 250px;
-    margin: 5px;
     justify-content: space-between;
 }
 #gallery h1{
@@ -331,31 +337,25 @@ textarea{
 #news h1,h4,P,input{
     margin-bottom: 10px;
 }
-#news input{
-    width: 350px;
-    height: 60px;
-    font-size: 15px;
+#news .button .send{
+    width: 100%;
+    height: 70px;
+    margin-right: -25px;
     padding: 15px;
 }
 .button{
-    display: inline-flex;
+    display:flex;
     position: relative;
-    z-index: 1;
-}
-.button button{
-    position: absolute;
-    left: 230px;
-    width: 35%;
-    height: 40px;
-    margin: auto;
-    padding: 10px;
-    top: 15%;
-    border: 1px solid var(--secondary-color);
+    flex-direction: row;
+    width: 300px;
     text-align: center;
-    justify-content: center;
-    justify-items: center;
 }
-
+.button #valide{
+    width: 100px;
+    position: relative;
+    font-size: 15px;
+    font-weight: bold;
+}
 #fin{
     text-align: center;
     padding: 25px;
